@@ -15,5 +15,5 @@ TexMat::~TexMat()
 void TexMat::apply(State&) const
 {
     glMatrixMode( GL_TEXTURE );
-    glLoadMatrixf( (GLfloat *)_matrix._mat );
+    glLoadMatrixf( _matrix.ptr() );
 }
