@@ -43,7 +43,7 @@ bool TexMat_readLocalData(Object& obj, Input& fr)
         {
             for(int j=0;j<4;++j)
             {
-                fr[k].getFloat(matrix._mat[i][j]);
+                fr[k].getFloat(matrix(i,j));
                 k++;
             }
         }
@@ -59,9 +59,9 @@ bool TexMat_writeLocalData(const Object& obj, Output& fw)
 {
     const TexMat& texmat = static_cast<const TexMat&>(obj);
     const Matrix& matrix = texmat.getMatrix();
-    fw.indent() << matrix._mat[0][0] << " " << matrix._mat[0][1] << " " << matrix._mat[0][2] << " " << matrix._mat[0][3] << endl;
-    fw.indent() << matrix._mat[1][0] << " " << matrix._mat[1][1] << " " << matrix._mat[1][2] << " " << matrix._mat[1][3] << endl;
-    fw.indent() << matrix._mat[2][0] << " " << matrix._mat[2][1] << " " << matrix._mat[2][2] << " " << matrix._mat[2][3] << endl;
-    fw.indent() << matrix._mat[3][0] << " " << matrix._mat[3][1] << " " << matrix._mat[3][2] << " " << matrix._mat[3][3] << endl;
+    fw.indent() << matrix(0,0) << " " << matrix(0,1) << " " << matrix(0,2) << " " << matrix(0,3) << endl;
+    fw.indent() << matrix(1,0) << " " << matrix(1,1) << " " << matrix(1,2) << " " << matrix(1,3) << endl;
+    fw.indent() << matrix(2,0) << " " << matrix(2,1) << " " << matrix(2,2) << " " << matrix(2,3) << endl;
+    fw.indent() << matrix(3,0) << " " << matrix(3,1) << " " << matrix(3,2) << " " << matrix(3,3) << endl;
     return true;
 }
